fixed footer styles to align to bottom!

--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,7 @@ hr {
   height: 35%;
   width: 8%;
   position: absolute;
-  padding: 35px 80px 40px 80px;
+  padding: 35px 80px 0px 80px;
 }
 
 .about {
@@ -229,7 +229,7 @@ hr {
   height: 35%;
   width: 8%;
   position: absolute;
-  padding: 35px 80px 40px 80px;
+  padding: 35px 80px 0px 80px;
 }
 
 /*
